--- a/styles/styles.css
+++ b/styles/styles.css
@@ -597,6 +597,11 @@ body {
 .content__item-group-inner--gap10 {
   gap: 24px;
 }
+@media (max-width: 400px) {
+  .content__item-group-inner--gap10 {
+    gap: 5px;
+  }
+}
 .content__item-group-inner--gap30 {
   gap: 26px;
 }
@@ -609,11 +614,11 @@ body {
 .content__item-group-inner--fd-col {
   flex-direction: column;
 }
-.content__item-group-inner--input-wd110 input {
-  width: 110px;
+.content__item-group-inner--input-wd100 input {
+  width: 100px;
 }
 @media (max-width: 400px) {
-  .content__item-group-inner--input-wd110 input {
+  .content__item-group-inner--input-wd100 input {
     width: 80px;
   }
 }
